test/Parsing/err-in-submodule.fab
#
# RUN: %fab --format=null %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

# CHECK: Inputs/submodule-with-error.fab:2:9: error: reference to undefined
# CHECK-NEXT: 1      sources = [
# CHECK-NEXT: 2              undefined
# CHECK-NEXT:                ^~~~~~~~~
foo = import('Inputs/submodule-with-error.fab');
